...
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:theme="@style/Widget.AppCompat.Button.Colored"
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/signIn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="Sign in"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/signUp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
...
